Minor layout fixes
 - Set height for search text input to remove strange white line that appears
   when viewed in Firefox at small screen sizes.
 - Set minimum width to stop the Crown logo from being cropped
 - Add space around the search form field to stop the focus state of the
   toggle button from overlapping with the input and submit button.

--- a/app/assets/stylesheets/helpers/_footer.scss
+++ b/app/assets/stylesheets/helpers/_footer.scss
@@ -118,6 +118,7 @@
 
       a {
         display: inline-block;
+        min-width: 134px;
       }
     }
   }
